--- a/wan2gp-google-colab.ipynb
+++ b/wan2gp-google-colab.ipynb
@@ -146,6 +146,8 @@
         "\n",
         "subprocess.run([sys.executable, '-m', 'pip', 'install', '--upgrade', 'pip', 'setuptools', 'wheel'], check=True, env=env)\n",
         "subprocess.run([sys.executable, '-m', 'pip', 'install', 'torch==2.8.0', 'torchvision', 'torchaudio', '--index-url', 'https://download.pytorch.org/whl/cu121'], check=True, env=env)\n",
+        "subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-U\", \"xformers\", \"--index-url\", \"https://download.pytorch.org/whl/cu126\"],\n",
+        "               check=True, env=env)\n",
         "subprocess.run([sys.executable, '-m', 'pip', 'install', '-r', str(WAN2GP_ROOT / 'requirements.txt')], check=True, env=env)\n"
       ]
     },
