--- a/wan2gp-google-colab.ipynb
+++ b/wan2gp-google-colab.ipynb
@@ -129,7 +129,7 @@
       "source": [
         "## 5. Install Python dependencies\n",
         "\n",
-        "Install PyTorch and Wan2GP's Python packages. Colab's GPU runtimes currently ship with CUDA 12.5 drivers, but PyTorch 2.8.0 only publishes up to cu121 wheels; the commands below install that build (it runs fine on newer drivers). Update this if PyTorch releases cu125 wheels or Google changes the runtime.\n"
+        "Install PyTorch, xformers and Wan2GP's Python packages. "
       ]
     },
     {
@@ -145,8 +145,8 @@
         "env.setdefault('DEBIAN_FRONTEND', 'noninteractive')\n",
         "\n",
         "subprocess.run([sys.executable, '-m', 'pip', 'install', '--upgrade', 'pip', 'setuptools', 'wheel'], check=True, env=env)\n",
-        "subprocess.run([sys.executable, '-m', 'pip', 'install', 'torch==2.8.0', 'torchvision', 'torchaudio', '--index-url', 'https://download.pytorch.org/whl/cu121'], check=True, env=env)\n",
-        "subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"-U\", \"xformers\", \"--index-url\", \"https://download.pytorch.org/whl/cu126\"],\n",
+        "subprocess.run([sys.executable, '-m', 'pip', 'install', 'torch==2.8.0', 'torchvision', 'torchaudio', '--index-url', 'https://download.pytorch.org/whl/cu128'], check=True, env=env)\n",
+        "subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"xformers==0.0.32.post2\", \"--index-url\", \"https://download.pytorch.org/whl/cu128\"],\n",
         "               check=True, env=env)\n",
         "subprocess.run([sys.executable, '-m', 'pip', 'install', '-r', str(WAN2GP_ROOT / 'requirements.txt')], check=True, env=env)\n"
       ]
